# libstratcom

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  README.txt  changelog.txt  index.html  libstratcomConfig.cmake.in
doc/: main_page.dox
examples/: CMakeLists.txt  axis_input.c  common.h  input_events.c  led_demo.c  test.c
html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  stratcom_8h.html  stratcom_8h_source.html  structstratcom__input__event.html  structstratcom__input__event__axis.html  structstratcom__input__event__button.html  structstratcom__input__event__slider.html  structstratcom__input__state.html  unionstratcom__input__event_1_1event__desc___t.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  classes_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  search.js  typedefs_0.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js
include/: stratcom.h
src/: stratcom.cpp  test.c
